# ecommerce-ETL

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile
docs/: executive_summary.md  notebook.html
notebooks/: dev_playground.ipynb
src/: cli.py  config.py  extract.py  flow.py  load.py  transform.py  utils.py  wait_for_db.py
tests/: test_transform.py
