[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-etl"
version = "0.1.0"
description = "End-to-end ETL demo: scrape -> transform -> load"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
known_third_party = [
  "pandas",
  "numpy",
  "requests",
  "sqlalchemy",
  "bs4",
  "pandera",
  "prefect",
  "pytest",
]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist", "docs", "docker", "outputs", "data"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
